[package]
name = "fixr"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"

[target.'cfg(unix)'.dependencies]
sysinfo = "0.29"
nix = "0.26"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation"
]}